--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-loader": "^9.2.2",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-hot-middleware": "^2.12.2",
+    "vue-style-loader": "^1.0.0"
   }
 }
