--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "author": "Evan You <yyx990803@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "node server",
-    "start": "cross-env NODE_ENV=production node server",
+    "dev": "babel-node server",
+    "start": "cross-env NODE_ENV=production babel-node server",
     "build": "npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
+    "babel-cli": "^6.11.4",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.13.2",
