--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.14.0",
     "firebase": "^2.4.2",
     "lru-cache": "^4.0.1",
+    "memory-fs": "^0.3.0",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.0",
     "vue": "^2.0.0-rc.1",
@@ -37,6 +38,7 @@
     "stylus-loader": "^2.1.2",
     "url-loader": "^0.5.7",
     "vue-loader": "^9.2.2",
+    "vue-style-loader": "^1.0.0",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
