--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "dependencies": {
     "es6-promise": "^3.2.1",
     "express": "^4.14.0",
-    "firebase": "^2.4.2",
+    "firebase": "3.3.2",
     "lru-cache": "^4.0.1",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.0",
-    "vue": "^2.0.0-rc.1",
-    "vue-router": "^2.0.0-rc.3",
-    "vue-server-renderer": "^2.0.0-rc.1",
-    "vuex": "^2.0.0-rc.4",
+    "vue": "2.0.0-rc.5",
+    "vue-router": "^2.0.0-rc.4",
+    "vue-server-renderer": "2.0.0-rc.5",
+    "vuex": "2.0.0-rc.5",
     "vuex-router-sync": "^3.0.0"
   },
   "devDependencies": {
@@ -30,9 +30,9 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-2": "^6.11.0",
     "cross-env": "^2.0.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "0.25.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
-    "file-loader": "^0.8.4",
+    "file-loader": "0.9.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.1.2",
     "url-loader": "^0.5.7",
