Install missing dependency

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "stylus-loader": "^2.1.2",
     "url-loader": "^0.5.7",
     "vue-loader": "^9.5.0",
+    "vue-style-loader": "^1.0.0",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
