--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "vue-router": "^2.1.0",
     "vue-server-renderer": "^2.1.3",
     "vuex": "^2.0.0",
-    "vuex-router-sync": "^3.0.0"
+    "vuex-router-sync": "^3.0.0",
+    "cross-env": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.3",
     "buble": "^0.14.2",
     "buble-loader": "^0.3.2",
-    "cross-env": "^3.1.3",
     "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.9.0",
