--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.14.0",
     "firebase": "^3.6.2",
     "lru-cache": "^4.0.2",
+    "object-assign-polyfill": "^0.1.0",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.2",
     "vue": "^2.1.10",
