--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-  "name": "vue-hackernews-2.0",
-  "description": "A Vue.js project",
-  "author": "Evan You <yyx990803@gmail.com>",
-  "private": true,
-  "scripts": {
-    "dev": "node server",
-    "start": "cross-env NODE_ENV=production node server",
-    "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
-  },
-  "engines": {
-    "node": ">=7.0",
-    "npm": ">=4.0"
-  },
-  "dependencies": {
-    "compression": "^1.6.2",
-    "cross-env": "^4.0.0",
-    "es6-promise": "^4.1.0",
-    "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "firebase": "^3.7.2",
-    "lru-cache": "^4.0.2",
-    "serve-favicon": "^2.4.1",
-    "vue": "^2.3.2",
-    "vue-router": "^2.5.0",
-    "vue-server-renderer": "^2.3.2",
-    "vuex": "^2.3.1",
-    "vuex-router-sync": "^4.1.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.4.0",
-    "css-loader": "^0.28.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "glob": "^7.1.1",
-    "rimraf": "^2.6.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "sw-precache-webpack-plugin": "^0.10.1",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^12.0.2",
-    "vue-style-loader": "^3.0.0",
-    "vue-template-compiler": "^2.3.2",
-    "webpack": "^2.4.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1",
-    "webpack-merge": "^4.0.0",
-    "webpack-node-externals": "^1.5.4"
-  }
+	"name": "vue-hackernews-2.0",
+	"version": "1.1.0",
+	"description": "A Vue.js project",
+	"author": "Evan You <yyx990803@gmail.com>",
+	"private": true,
+	"scripts": {
+		"dev": "node server",
+		"start": "cross-env NODE_ENV=production node server",
+		"build": "rimraf dist && npm run build:client && npm run build:server",
+		"build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+		"build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
+	},
+	"engines": {
+		"node": ">=7.0",
+		"npm": ">=4.0"
+	},
+	"dependencies": {
+		"compression": "^1.6.2",
+		"cross-env": "^5.0.1",
+		"es6-promise": "^4.1.1",
+		"express": "^4.15.3",
+		"extract-text-webpack-plugin": "^2.1.2",
+		"firebase": "^4.1.3",
+		"lru-cache": "^4.1.1",
+		"serve-favicon": "^2.4.3",
+		"vue": "^2.3.4",
+		"vue-router": "^2.7.0",
+		"vue-server-renderer": "^2.3.4",
+		"vuex": "^2.3.1",
+		"vuex-router-sync": "^4.2.0"
+	},
+	"devDependencies": {
+		"autoprefixer": "^7.1.1",
+		"babel-core": "^6.25.0",
+		"babel-loader": "^7.1.1",
+		"babel-plugin-syntax-dynamic-import": "^6.18.0",
+		"babel-preset-env": "^1.5.2",
+		"css-loader": "^0.28.4",
+		"file-loader": "^0.11.2",
+		"friendly-errors-webpack-plugin": "^1.6.1",
+		"glob": "^7.1.2",
+		"rimraf": "^2.6.1",
+		"stylus": "^0.54.5",
+		"stylus-loader": "^3.0.1",
+		"sw-precache-webpack-plugin": "^0.11.3",
+		"url-loader": "^0.5.9",
+		"vue-loader": "^13.0.0",
+		"vue-style-loader": "^3.0.1",
+		"vue-template-compiler": "^2.3.4",
+		"webpack": "^3.0.0",
+		"webpack-dev-middleware": "^1.11.0",
+		"webpack-hot-middleware": "^2.18.0",
+		"webpack-merge": "^4.1.0",
+		"webpack-node-externals": "^1.6.0"
+	}
 }
