--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "es6-promise": "^4.1.1",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "firebase": "^4.3.1",
+    "firebase": "4.1.3",
     "lru-cache": "^4.1.1",
     "route-cache": "0.4.3",
     "serve-favicon": "^2.4.4",
