--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
+    "cy:open": "cypress open",
+    "e2e": "start-server-and-test dev http://localhost:8080 cy:open"
   },
   "engines": {
     "node": ">=7.0",
@@ -39,10 +41,11 @@
     "chokidar": "^1.7.0",
     "css-loader": "^0.28.7",
     "cypress": "^1.4.1",
-    "cypress-vue-unit-test": "^1.9.0",
+    "cypress-vue-unit-test": "^1.10.0",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "rimraf": "^2.6.2",
+    "start-server-and-test": "^1.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.11.4",
