--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "cy:open": "cypress open",
     "cy:run": "cypress run",
+    "cy:run:record": "cypress run --record",
     "dev": "node server",
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "cy:open": "cypress open",
-    "e2e": "start-server-and-test dev http://localhost:8080 cy:open"
+    "e2e": "start-server-and-test dev http://localhost:8080 cy:open",
+    "ci:record": "start-server-and-test dev http://localhost:8080 cy:run:record"
   },
   "engines": {
     "node": ">=7.0",
