--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "cross-env": "^5.1.1",
     "es6-promise": "^4.1.1",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "firebase": "4.6.2",
+    "firebase": "^4.12.0",
     "lru-cache": "^4.1.1",
-    "route-cache": "0.4.3",
+    "route-cache": "0.4.4",
     "serve-favicon": "^2.4.5",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
@@ -31,24 +30,26 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^8.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
-    "chokidar": "^1.7.0",
-    "css-loader": "^0.28.7",
+    "chokidar": "^2.0.3",
+    "css-loader": "^0.28.11",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "mini-css-extract-plugin": "^0.2.0",
     "rimraf": "^2.6.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.11.4",
-    "url-loader": "^0.6.2",
-    "vue-loader": "^15.0.0-beta.1",
+    "url-loader": "^1.0.1",
+    "vue-loader": "^15.0.0-beta.7",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.0",
+    "webpack": "^4.3.0",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-middleware": "^3.1.0",
     "webpack-hot-middleware": "^2.20.0",
     "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0"
