--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "test": "jest -c jest.config.js"
+    "test": "NODE_ENV=test jest -c jest.config.js"
   },
   "engines": {
     "node": ">=7.0",
