--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "test:unit": "NODE_ENV=test jest --config jest.config.js",
+    "test:e2e": "testcafe 'chrome:headless' tests/e2e/**/*.e2e.js"
   },
   "engines": {
     "node": ">=7.0",
@@ -32,20 +34,29 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.28",
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "chokidar": "^1.7.0",
+    "chromedriver": "^2.45.0",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
+    "firebase-mock": "^2.2.10",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "jest": "^24.0.0",
+    "jest-serializer-vue": "^2.0.2",
+    "jest-transform-stub": "^1.0.0",
+    "nightwatch": "^1.0.18",
     "rimraf": "^2.6.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.11.4",
+    "testcafe": "^0.23.3",
     "url-loader": "^0.6.2",
+    "vue-jest": "^3.0.2",
     "vue-loader": "^15.3.0",
     "vue-template-compiler": "^2.5.22",
     "webpack": "^3.8.1",
