--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,8 @@ jobs:
         command: npm run dev
         background: true
     - run:
-        command:
-          - >-
+        name: waiting for server
+        command: |
             while ! nc -z localhost 8080; do
               sleep 0.1 # wait for 1/10 of the second before check again
             done
