--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "private": true,
   "scripts": {
     "dev": "node server",
-    "start": "cross-env NODE_ENV=production node server",
-    "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "postinstall": "npm run build"
+    "start": "node server",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "engines": {
     "node": ">=7.0",
