--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Install npm dependencies and build for deployment
       run: |
         npm install
+        npm build
       env:
         NODE_ENV: production
     - name: Deploy to Server
