--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-hackernews-2.0",
+  "name": "nostalgia-hn",
   "description": "A Vue.js project",
   "author": "Evan You <yyx990803@gmail.com>",
   "private": true,
