Change page titles to Nostalgia HN

--- a/manifest.json
+++ b/manifest.json
@@ -1,35 +1,35 @@
 {
-  "name": "Vue Hackernews 2.0",
-  "short_name": "Vue HN",
+  "name": "Nostalgia HN",
+  "short_name": "N7a HN",
   "icons": [{
-      "src": "/public/logo-120.png",
-      "sizes": "120x120",
-      "type": "image/png"
-    }, {
-      "src": "/public/logo-144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    }, {
-      "src": "/public/logo-152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    }, {
-      "src": "/public/logo-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }, {
-      "src": "/public/logo-256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    }, {
-      "src": "/public/logo-384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    }, {
+    "src": "/public/logo-120.png",
+    "sizes": "120x120",
+    "type": "image/png"
+  }, {
+    "src": "/public/logo-144.png",
+    "sizes": "144x144",
+    "type": "image/png"
+  }, {
+    "src": "/public/logo-152.png",
+    "sizes": "152x152",
+    "type": "image/png"
+  }, {
+    "src": "/public/logo-192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }, {
+    "src": "/public/logo-256.png",
+    "sizes": "256x256",
+    "type": "image/png"
+  }, {
+    "src": "/public/logo-384.png",
+    "sizes": "384x384",
+    "type": "image/png"
+  }, {
     "src": "/public/logo-512.png",
     "sizes": "512x512",
     "type": "image/png"
-    }],
+  }],
   "start_url": "/",
   "background_color": "#f2f3f5",
   "display": "standalone",
