--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.22",
+    "vue-star-rating": "^1.6.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
   },
