--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "firebase": "4.6.2",
-    "vue": "^2.6.12",
+    "vue": "^3.1.0",
+    "@vue/compat": "^3.1.0",
     "vue-router": "^3.0.0",
     "vuex": "^3.0.0",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "vite-plugin-vue2": "^1.4.4",
+    "@vitejs/plugin-vue": "^1.2.2",
+    "@vue/compiler-sfc": "^3.1.0",
     "stylus": "^0.54.8",
     "vite": "^2.2.3"
   }
