--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "firebase": "4.6.2",
     "vue": "^3.1.0",
     "@vue/compat": "^3.1.0",
-    "vue-router": "^3.0.0",
-    "vuex": "^4.0.0",
-    "vuex-router-sync": "^5.0.0"
+    "vue-router": "^4.0.0",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.2",
